# alien-shooter-template-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config  config.toml
scripts/: paths.env  tc219.ps1
src/: interrupt.rs  main.rs  pixel.rs  print.rs
