[package]
name = "alien-shooter-rs"
version = "0.2.0"
authors = [
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xil-sys = { git = "https://github.com/RHamalainen/xil-custom-sys" }

# For simple print-implementation.
arrayvec = { version = "0.5.1", default-features = false }
